exp/image_samples/DDPG_celeba_motion_deblur_sigma_y_0.1/0_logs.log
INFO - main.py - 2025-07-18 13:32:42,711 - Argument config: 'celeba_hq.yml'
INFO - main.py - 2025-07-18 13:32:42,712 - Argument deg: 'motion_deblur'
INFO - main.py - 2025-07-18 13:32:42,712 - Argument deg_scale: 0.0
INFO - main.py - 2025-07-18 13:32:42,712 - Argument eta_tilde: 0.6
INFO - main.py - 2025-07-18 13:32:42,712 - Argument exp: 'exp'
INFO - main.py - 2025-07-18 13:32:42,712 - Argument gamma: 5.0
INFO - main.py - 2025-07-18 13:32:42,712 - Argument image_folder: 'exp/image_samples/DDPG_celeba_motion_deblur_sigma_y_0.1'
INFO - main.py - 2025-07-18 13:32:42,713 - Argument inject_noise: 1
INFO - main.py - 2025-07-18 13:32:42,713 - Argument ni: True
INFO - main.py - 2025-07-18 13:32:42,713 - Argument operator_imp: 'FFT'
INFO - main.py - 2025-07-18 13:32:42,713 - Argument path_y: 'celeba_hq'
INFO - main.py - 2025-07-18 13:32:42,713 - Argument save_observed_img: False
INFO - main.py - 2025-07-18 13:32:42,713 - Argument scale_ls: 1.0
INFO - main.py - 2025-07-18 13:32:42,713 - Argument seed: 1234
INFO - main.py - 2025-07-18 13:32:42,713 - Argument sigma_y: 0.1
INFO - main.py - 2025-07-18 13:32:42,713 - Argument step_size_mode: 1
INFO - main.py - 2025-07-18 13:32:42,713 - Argument subset_end: -1
INFO - main.py - 2025-07-18 13:32:42,713 - Argument subset_start: -1
INFO - main.py - 2025-07-18 13:32:42,713 - Argument verbose: 'info'
INFO - main.py - 2025-07-18 13:32:42,713 - Argument xi: 1e-05
INFO - main.py - 2025-07-18 13:32:42,713 - Argument zeta: 0.6
INFO - main.py - 2025-07-18 13:32:42,714 - Using device: cpu
ERROR - main.py - 2025-07-18 13:32:43,636 - Traceback (most recent call last):
  File "/home/24212031110/DDPG/main.py", line 185, in main
    runner.sample(logger)
  File "/home/24212031110/DDPG/guided_diffusion/diffusion.py", line 218, in sample
    self.ddpg_wrapper(model, cls_fn, logger)
  File "/home/24212031110/DDPG/guided_diffusion/diffusion.py", line 364, in ddpg_wrapper
    from functions.motionblur import Kernel
  File "/home/24212031110/DDPG/functions/motionblur.py", line 35
    def polar2z(r: np.ndarray, ?: np.ndarray) -> np.ndarray:
                               ^
SyntaxError: invalid syntax

